...
            android:text="@={viewModel.reminderDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminderTitle" />

        <TextView
            android:id="@+id/selectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_location"
            android:drawableLeft="@drawable/ic_location"
...
